--- a/learning.html
+++ b/learning.html
@@ -202,7 +202,7 @@
                     <br><br>
                     <strong>Takeaway:</strong> Correlating AI impact reports, understanding AI capabilities and limitations, and analyzing survey responses revealed genuine disruption and redefinition. The uncertainty is both challenging and opportunistic. It requires acknowledging that definite paths will change, college planning must account for AI disrupting entry-level careers, and skills/competencies are being redrawn. This is a decent attempt to decode a very important, less-explored topic. For me, it's been incredibly helpful—I'm now making choices based on what interests me and where I thrive, applying my core strengths in my college planning journey. I don't have all answers yet, but this work provides a map through the noise.
                 </div>
-                <a href="https://zenodo.org/" class="work-link" target="_blank">View on Zenodo</a>
+                <a href="https://zenodo.org/records/17111087" class="work-link" target="_blank">View on Zenodo</a>
             </div>
 
             <div class="work-card">
