--- a/leq-asia.html
+++ b/leq-asia.html
@@ -138,20 +138,74 @@
             </div>
 
             <div class="essay-content">
-                <!-- PASTE YOUR CONTENT BELOW THIS LINE -->
-                <!-- For section headings wrap in <h2></h2> -->
-                <!-- For each paragraph, wrap in <p></p> -->
-                <!-- Example:
                 <h2>Thesis</h2>
-                <p>Your thesis paragraph here.</p>
+                <p>
+                    From 1900 onward, anti-imperialist movements in Asia led to major transformations—most notably, the collapse of colonial empires and the emergence of independent nation-states rooted in nationalist ideologies. These movements significantly restructured political systems, national identities, and in some cases social hierarchies. However, the extent of transformation varied by region: while countries like India and China experienced profound changes, others continued to struggle with neocolonial dependency, authoritarianism, and internal conflict, revealing both the achievements and limitations of anti-imperialist efforts.
+                </p>
 
                 <h2>Contextualization</h2>
-                <p>Your contextualization paragraph here.</p>
-                -->
-                
+                <p>
+                    During the 19th and early 20th centuries, much of Asia was under the control of Western powers, with Britain dominating India and Burma, France controlling Indochina, and the Netherlands ruling the Dutch East Indies (Indonesia). Japan, although not colonized, emerged as an imperial power itself, colonizing Korea and parts of China. However, global events like World War I and World War II weakened European empires economically and politically. Simultaneously, ideas of self-determination and nationalism—spread through Western education, revolutionary ideologies (like Marxism), and shared wartime experiences—encouraged Asian intellectuals and leaders to challenge colonial domination. The era after 1900 witnessed a rising tide of anti-imperialism across the continent, which would fundamentally reshape Asia’s political and social order.
+                </p>
 
+                <h2>Political Transformation</h2>
+                <p>
+                    The most immediate and significant transformation was political: the disintegration of colonial empires and the rise of independent Asian states. Nationalist leaders mobilized populations through political parties, guerrilla movements, and diplomatic campaigns.
+                </p>
+                <p>
+                    India serves as a prime example. Under the leadership of the Indian National Congress and figures like Mahatma Gandhi and Jawaharlal Nehru, anti-colonial resistance through nonviolent civil disobedience culminated in independence from Britain in 1947. India’s new government adopted democratic institutions and a written constitution, signaling a decisive shift from colonial autocracy to self-rule.
+                </p>
+                <p>
+                    In Vietnam, anti-imperialist resistance took a more militant form. Ho Chi Minh led the Viet Minh in a long struggle against French colonial rule, culminating in the defeat of French forces at Dien Bien Phu in 1954. The subsequent American intervention and the eventual victory of North Vietnam in 1975 consolidated the country’s independence under a communist regime—marking a profound ideological and political transformation.
+                </p>
+                <p>
+                    Indonesia similarly saw political revolution. After Japanese occupation during World War II, Sukarno declared independence in 1945, leading to a bloody struggle against the returning Dutch. The Dutch were eventually forced to recognize Indonesian sovereignty in 1949. This marked the end of centuries of colonial rule and the birth of the modern Indonesian state.
+                </p>
+                <p>
+                    These examples show that anti-imperialist movements were central to reshaping Asia’s political landscape, replacing European control with sovereign, nationalist governments.
+                </p>
 
-                <!-- PASTE YOUR CONTENT ABOVE THIS LINE -->
+                <h2>Social and Cultural Shifts</h2>
+                <p>
+                    Anti-imperialism also brought about significant social and cultural changes, though the extent of transformation was more uneven.
+                </p>
+                <p>
+                    In China, the fall of the Qing dynasty in 1911 was followed by decades of internal struggle, culminating in the Chinese Communist Revolution in 1949, led by Mao Zedong. The revolution aimed not only to end foreign influence but also to radically transform Chinese society—abolishing landlordism, promoting gender equality, and enforcing mass literacy and collectivization. Though controversial and at times destructive (for example, during the Cultural Revolution), these changes represented a deep break with China’s imperial past.
+                </p>
+                <p>
+                    In India, independence inspired a reevaluation of entrenched social systems. Gandhi and other reformers advocated for the uplift of marginalized groups, including women and lower castes. Though the caste system and patriarchal norms persisted, the post-independence era saw the enshrinement of equality and secularism in law, alongside efforts to expand education and democratic participation.
+                </p>
+                <p>
+                    Many anti-imperialist movements also revived indigenous cultures and languages that had been suppressed under colonialism. For instance, in Indonesia, Bahasa Indonesia was promoted as a national language to foster unity, replacing Dutch as the language of governance and education.
+                </p>
+                <p>
+                    These shifts show that anti-imperialism was not merely political; it also sought to redefine national identities and reclaim cultural heritage, though success varied depending on local contexts and leadership.
+                </p>
+
+                <h2>Economic and Postcolonial Challenges: Limits to Transformation</h2>
+                <p>
+                    Despite these major changes, the extent of transformation was limited in key areas, particularly economically and in terms of long-term governance.
+                </p>
+                <p>
+                    Many newly independent states remained economically dependent on former colonizers. For instance, India’s economy remained tied to Britain’s in the early post-independence period, relying on exports like cotton and tea. Likewise, Southeast Asian economies often continued to produce raw materials for Western markets, limiting their ability to diversify or industrialize independently.
+                </p>
+                <p>
+                    Furthermore, political instability and authoritarianism undermined the promises of national liberation. While India maintained democracy, countries like Indonesia under Sukarno and later Suharto became increasingly authoritarian. Similarly, Pakistan experienced multiple military coups after its independence from Britain in 1947.
+                </p>
+                <p>
+                    The violent Partition of India and Pakistan, which resulted in over a million deaths and massive displacement, revealed the fragility of nationalist unity and the enduring divisions created during colonial rule.
+                </p>
+                <p>
+                    In Cambodia, an anti-imperialist revolution brought the Khmer Rouge to power in 1975. Their radical attempt to reshape Cambodian society led to genocide, showing how anti-imperialist movements could result in catastrophic consequences when co-opted by extremist ideologies.
+                </p>
+                <p>
+                    Thus, while anti-imperialism achieved independence, it did not always bring lasting prosperity, stability, or justice—limiting the overall extent of Asia’s transformation.
+                </p>
+
+                <h2>Conclusion</h2>
+                <p>
+                    In the period after 1900, anti-imperialist movements played a central role in transforming Asia. Politically, they dismantled European empires and established new nation-states grounded in nationalist ideologies. In many places, they also reshaped cultural identities and began social reforms. However, these movements did not uniformly deliver economic independence or stable governance. The legacy of colonialism, Cold War geopolitics, and internal divisions often hampered the success of postcolonial nations. Therefore, Asia was extensively transformed by anti-imperialism, but not universally or entirely, and the impacts continue to reverberate in the modern era.
+                </p>
             </div>
         </article>
     </div>
