--- a/visual-art.html
+++ b/visual-art.html
@@ -180,6 +180,26 @@
 
         <div class="gallery">
             <div class="artwork">
+                <img src="longing_fish.png" alt="Longing Fish" class="artwork-image">
+                <div class="artwork-info">
+                    <div class="artwork-title">longing</div>
+                    <div class="artwork-description">
+                        A portrait of a deep-sea diver fish moving through a vast, intangible liquid, constantly yearning and searching for something just beyond reach. The pixelated form dissolves at the edges, blurring the boundary between creature and void. The blue-grey tones evoke the crushing depths where light barely penetrates, while the red accent suggests a vital warmth—a heart still beating despite the pressure. This piece captures the eternal drift of searching without finding, the ache of movement without destination, suspended in an endless medium that both sustains and isolates.
+                    </div>
+                </div>
+            </div>
+
+            <div class="artwork">
+                <img src="persistence_flower.png" alt="Persistence Flower" class="artwork-image">
+                <div class="artwork-info">
+                    <div class="artwork-title">persistence flower</div>
+                    <div class="artwork-description">
+                        A flower that sprouts from the cold, showing the persistence of life and vitality even against the coolness of society's stem. The contrasting red and blue create a visual tension between warmth and frost, passion and constraint. The organic curves of the petals stand defiant against the rigid, angular stem that seeks to contain it. Each pixelated layer adds to the sense of something fighting through barriers to bloom—imperfect, textured, real. The white void surrounding it emphasizes its solitude, yet the flower's vibrant presence suggests that isolation cannot suppress what is determined to grow.
+                    </div>
+                </div>
+            </div>
+
+            <div class="artwork">
                 <img src="handvisualart_3.png" alt="Reaching Hand in Space" class="artwork-image">
                 <div class="artwork-info">
                     <div class="artwork-title">reaching hand in space</div>
