--- a/visual-art.html
+++ b/visual-art.html
@@ -179,6 +179,15 @@
         </div>
 
         <div class="gallery">
+             <div class="artwork">
+                <img src="mind_comet.png" alt="Mind-Comet" class="artwork-image">
+                <div class="artwork-info">
+                    <div class="artwork-title">mind-comet</div>
+                    <div class="artwork-description">
+                        The mind-comet mirrors the constant movement of thought: self-propelled in feeling, yet trailed by patterns and causes it can’t directly perceive. Other comets can read the wake, but each is locked away from awareness of its own tail. Gravitational objects bend the path in ways that can be predicted—yet the comet still experiences wide, vivid freedom in its travel.
+                    </div>
+                </div>
+            </div>
             <div class="artwork">
                 <img src="longing_fish.png" alt="Longing Fish" class="artwork-image">
                 <div class="artwork-info">
